src/antlr/EarthParser.java
// Generated from ./src/antlr/EarthParser.g4 by ANTLR 4.13.2
package antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class EarthParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Whitespace=1, SingleLineComment=2, MultiLineComment=3, Let=4, Var=5, When=6, 
		Else=7, Fn=8, Yeet=9, Unnamed=10, Loop=11, StrLit=12, IntLit=13, FloatLit=14, 
		BoolLit=15, UntypedIdent=16, Eq=17, Gt=18, Lt=19, Gte=20, Lte=21, EqEq=22, 
		BangEq=23, Plus=24, Minus=25, Star=26, Slash=27, Mod=28, Bang=29, And=30, 
		Or=31, Colon=32, Comma=33, LParen=34, RParen=35, LBrace=36, RBrace=37;
	public static final int
		RULE_program = 0, RULE_stmtList = 1, RULE_stmt = 2, RULE_declStmt = 3, 
		RULE_reassignStmt = 4, RULE_whenElseStmt = 5, RULE_yeetStmt = 6, RULE_fnDefStmt = 7, 
		RULE_unnamedStmt = 8, RULE_loopStmt = 9, RULE_expr = 10, RULE_primary = 11, 
		RULE_typedIdentExpr = 12, RULE_typedIdentList = 13, RULE_exprList = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stmtList", "stmt", "declStmt", "reassignStmt", "whenElseStmt", 
			"yeetStmt", "fnDefStmt", "unnamedStmt", "loopStmt", "expr", "primary", 
			"typedIdentExpr", "typedIdentList", "exprList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'let'", "'var'", "'when'", "'else'", "'fn'", 
			"'yeet'", "'_'", "'loop'", null, null, null, null, null, "'='", "'>'", 
			"'<'", "'>='", "'<='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'!'", "'&&'", "'||'", "':'", "','", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Whitespace", "SingleLineComment", "MultiLineComment", "Let", "Var", 
			"When", "Else", "Fn", "Yeet", "Unnamed", "Loop", "StrLit", "IntLit", 
			"FloatLit", "BoolLit", "UntypedIdent", "Eq", "Gt", "Lt", "Gte", "Lte", 
			"EqEq", "BangEq", "Plus", "Minus", "Star", "Slash", "Mod", "Bang", "And", 
			"Or", "Colon", "Comma", "LParen", "RParen", "LBrace", "RBrace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EarthParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EarthParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(EarthParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			stmtList();
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtListContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitStmtList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtListContext stmtList() throws RecognitionException {
		StmtListContext _localctx = new StmtListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmtList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 69488L) != 0)) {
				{
				{
				setState(33);
				stmt();
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public DeclStmtContext declStmt() {
			return getRuleContext(DeclStmtContext.class,0);
		}
		public ReassignStmtContext reassignStmt() {
			return getRuleContext(ReassignStmtContext.class,0);
		}
		public WhenElseStmtContext whenElseStmt() {
			return getRuleContext(WhenElseStmtContext.class,0);
		}
		public YeetStmtContext yeetStmt() {
			return getRuleContext(YeetStmtContext.class,0);
		}
		public FnDefStmtContext fnDefStmt() {
			return getRuleContext(FnDefStmtContext.class,0);
		}
		public UnnamedStmtContext unnamedStmt() {
			return getRuleContext(UnnamedStmtContext.class,0);
		}
		public LoopStmtContext loopStmt() {
			return getRuleContext(LoopStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Let:
			case Var:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				declStmt();
				}
				break;
			case UntypedIdent:
				enterOuterAlt(_localctx, 2);
				{
				setState(40);
				reassignStmt();
				}
				break;
			case When:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				whenElseStmt();
				}
				break;
			case Yeet:
				enterOuterAlt(_localctx, 4);
				{
				setState(42);
				yeetStmt();
				}
				break;
			case Fn:
				enterOuterAlt(_localctx, 5);
				{
				setState(43);
				fnDefStmt();
				}
				break;
			case Unnamed:
				enterOuterAlt(_localctx, 6);
				{
				setState(44);
				unnamedStmt();
				}
				break;
			case Loop:
				enterOuterAlt(_localctx, 7);
				{
				setState(45);
				loopStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclStmtContext extends ParserRuleContext {
		public Token letType;
		public TypedIdentExprContext typedIdentExpr() {
			return getRuleContext(TypedIdentExprContext.class,0);
		}
		public TerminalNode Eq() { return getToken(EarthParser.Eq, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Let() { return getToken(EarthParser.Let, 0); }
		public TerminalNode Var() { return getToken(EarthParser.Var, 0); }
		public DeclStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitDeclStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclStmtContext declStmt() throws RecognitionException {
		DeclStmtContext _localctx = new DeclStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((DeclStmtContext)_localctx).letType = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==Let || _la==Var) ) {
				((DeclStmtContext)_localctx).letType = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(49);
			typedIdentExpr();
			setState(50);
			match(Eq);
			setState(51);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReassignStmtContext extends ParserRuleContext {
		public Token ident;
		public TerminalNode Eq() { return getToken(EarthParser.Eq, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode UntypedIdent() { return getToken(EarthParser.UntypedIdent, 0); }
		public ReassignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reassignStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitReassignStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReassignStmtContext reassignStmt() throws RecognitionException {
		ReassignStmtContext _localctx = new ReassignStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_reassignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			((ReassignStmtContext)_localctx).ident = match(UntypedIdent);
			setState(54);
			match(Eq);
			setState(55);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhenElseStmtContext extends ParserRuleContext {
		public List<TerminalNode> When() { return getTokens(EarthParser.When); }
		public TerminalNode When(int i) {
			return getToken(EarthParser.When, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> LBrace() { return getTokens(EarthParser.LBrace); }
		public TerminalNode LBrace(int i) {
			return getToken(EarthParser.LBrace, i);
		}
		public List<StmtListContext> stmtList() {
			return getRuleContexts(StmtListContext.class);
		}
		public StmtListContext stmtList(int i) {
			return getRuleContext(StmtListContext.class,i);
		}
		public List<TerminalNode> RBrace() { return getTokens(EarthParser.RBrace); }
		public TerminalNode RBrace(int i) {
			return getToken(EarthParser.RBrace, i);
		}
		public List<TerminalNode> Else() { return getTokens(EarthParser.Else); }
		public TerminalNode Else(int i) {
			return getToken(EarthParser.Else, i);
		}
		public WhenElseStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whenElseStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitWhenElseStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhenElseStmtContext whenElseStmt() throws RecognitionException {
		WhenElseStmtContext _localctx = new WhenElseStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whenElseStmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(When);
			setState(58);
			expr(0);
			setState(59);
			match(LBrace);
			setState(60);
			stmtList();
			setState(61);
			match(RBrace);
			setState(71);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(62);
					match(Else);
					setState(63);
					match(When);
					setState(64);
					expr(0);
					setState(65);
					match(LBrace);
					setState(66);
					stmtList();
					setState(67);
					match(RBrace);
					}
					} 
				}
				setState(73);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(74);
				match(Else);
				setState(75);
				match(LBrace);
				setState(76);
				stmtList();
				setState(77);
				match(RBrace);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class YeetStmtContext extends ParserRuleContext {
		public TerminalNode Yeet() { return getToken(EarthParser.Yeet, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public YeetStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_yeetStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitYeetStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final YeetStmtContext yeetStmt() throws RecognitionException {
		YeetStmtContext _localctx = new YeetStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_yeetStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(Yeet);
			setState(82);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FnDefStmtContext extends ParserRuleContext {
		public Token name;
		public TypedIdentListContext params;
		public Token retType;
		public StmtListContext body;
		public TerminalNode Fn() { return getToken(EarthParser.Fn, 0); }
		public TerminalNode LParen() { return getToken(EarthParser.LParen, 0); }
		public TerminalNode RParen() { return getToken(EarthParser.RParen, 0); }
		public TerminalNode LBrace() { return getToken(EarthParser.LBrace, 0); }
		public TerminalNode RBrace() { return getToken(EarthParser.RBrace, 0); }
		public List<TerminalNode> UntypedIdent() { return getTokens(EarthParser.UntypedIdent); }
		public TerminalNode UntypedIdent(int i) {
			return getToken(EarthParser.UntypedIdent, i);
		}
		public TypedIdentListContext typedIdentList() {
			return getRuleContext(TypedIdentListContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public FnDefStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnDefStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitFnDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FnDefStmtContext fnDefStmt() throws RecognitionException {
		FnDefStmtContext _localctx = new FnDefStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fnDefStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(Fn);
			setState(85);
			((FnDefStmtContext)_localctx).name = match(UntypedIdent);
			setState(86);
			match(LParen);
			setState(87);
			((FnDefStmtContext)_localctx).params = typedIdentList();
			setState(88);
			match(RParen);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UntypedIdent) {
				{
				setState(89);
				((FnDefStmtContext)_localctx).retType = match(UntypedIdent);
				}
			}

			setState(92);
			match(LBrace);
			setState(93);
			((FnDefStmtContext)_localctx).body = stmtList();
			setState(94);
			match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnnamedStmtContext extends ParserRuleContext {
		public TerminalNode Unnamed() { return getToken(EarthParser.Unnamed, 0); }
		public TerminalNode Eq() { return getToken(EarthParser.Eq, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnnamedStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unnamedStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitUnnamedStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnnamedStmtContext unnamedStmt() throws RecognitionException {
		UnnamedStmtContext _localctx = new UnnamedStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unnamedStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(Unnamed);
			setState(97);
			match(Eq);
			setState(98);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LoopStmtContext extends ParserRuleContext {
		public DeclStmtContext initializer;
		public ExprContext condition;
		public ReassignStmtContext update;
		public StmtListContext body;
		public TerminalNode Loop() { return getToken(EarthParser.Loop, 0); }
		public List<TerminalNode> Comma() { return getTokens(EarthParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(EarthParser.Comma, i);
		}
		public TerminalNode LBrace() { return getToken(EarthParser.LBrace, 0); }
		public TerminalNode RBrace() { return getToken(EarthParser.RBrace, 0); }
		public DeclStmtContext declStmt() {
			return getRuleContext(DeclStmtContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReassignStmtContext reassignStmt() {
			return getRuleContext(ReassignStmtContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public LoopStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitLoopStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopStmtContext loopStmt() throws RecognitionException {
		LoopStmtContext _localctx = new LoopStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_loopStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(Loop);
			setState(101);
			((LoopStmtContext)_localctx).initializer = declStmt();
			setState(102);
			match(Comma);
			setState(103);
			((LoopStmtContext)_localctx).condition = expr(0);
			setState(104);
			match(Comma);
			setState(105);
			((LoopStmtContext)_localctx).update = reassignStmt();
			setState(106);
			match(LBrace);
			setState(107);
			((LoopStmtContext)_localctx).body = stmtList();
			setState(108);
			match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NotExprContext extends ExprContext {
		public TerminalNode Bang() { return getToken(EarthParser.Bang, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NotExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitNotExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryExprContext extends ExprContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public PrimaryExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitPrimaryExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NegExprContext extends ExprContext {
		public TerminalNode Minus() { return getToken(EarthParser.Minus, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NegExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitNegExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiplicationExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Star() { return getToken(EarthParser.Star, 0); }
		public TerminalNode Slash() { return getToken(EarthParser.Slash, 0); }
		public TerminalNode Mod() { return getToken(EarthParser.Mod, 0); }
		public MultiplicationExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitMultiplicationExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrExprContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode Or() { return getToken(EarthParser.Or, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OrExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitOrExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AdditiveExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Plus() { return getToken(EarthParser.Plus, 0); }
		public TerminalNode Minus() { return getToken(EarthParser.Minus, 0); }
		public AdditiveExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitAdditiveExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelationalExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Lte() { return getToken(EarthParser.Lte, 0); }
		public TerminalNode Gte() { return getToken(EarthParser.Gte, 0); }
		public TerminalNode Lt() { return getToken(EarthParser.Lt, 0); }
		public TerminalNode Gt() { return getToken(EarthParser.Gt, 0); }
		public RelationalExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitRelationalExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EqualityExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EqEq() { return getToken(EarthParser.EqEq, 0); }
		public TerminalNode BangEq() { return getToken(EarthParser.BangEq, 0); }
		public EqualityExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitEqualityExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AndExprContext extends ExprContext {
		public ExprContext left;
		public ExprContext right;
		public TerminalNode And() { return getToken(EarthParser.And, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AndExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EarthParserVisitor ) return ((EarthParserVisitor<? extends T>)visitor).visitAndExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}
